--- a/dotnet/RulesConnector/RulesConnector.csproj
+++ b/dotnet/RulesConnector/RulesConnector.csproj
@@ -3,10 +3,17 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <RootNamespace>SwiftLeap.RulesConnector</RootNamespace>
+        <Nullable>enable</Nullable>
+        <LangVersion>8</LangVersion>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\Common\PhdCommon\PhdCommon.csproj" />
     </ItemGroup>
 
 </Project>
